Release history for katriawm

v16.02  2016-02-01
  [Fixed]
  - Less flickering when changing workspaces on the same monitor.
  - Less flickering when mapping new windows.
  - Unhiding already visible clients is now a no-op. This fixes a bug
    when moving clients to other workspaces.
  - Floaters will be re-fit to their monitor when changing workspaces.
    We don't want floaters to float away too far ... :-)
  - Floating clients can resize themselves. This is considered a "fix"
    since there are some dialog windows which rely on this (e.g.
    Inkscape or Firefox/GTK+3).

  [Added]
  - EWMH fullscreen hint honoured when windows are being mapped (instead
    of only responding to ClientMessages asking for fullscreen mode
    *after* the window has been mapped).
  - ICCCM size hints (increments, aspect ratio, min/max size) are now
    being honoured by floating windows.
  - Initial workspaces can be configured in config.h.
  - katriabi can produce output suitable for bevelbar.

  [Changed]
  - y offset and height taken into account when sorting monitors, the
    same way lemonbar sorts monitors.

v16.01  2016-01-08
  [Fixed]
  - A bar will now be notified when a different monitor has been
    selected.

  [Changed]
  - When floating clients are larger than the work area, we try to make
    the upper left corner visible.
  - Reworked theme "modern".
  - Maintainers: The Makefile is now located in "src/".
  - "state_to_lemonbar.sh" has been replaced with a more portable tool
    written in C.
  - Theming:
    - No need for ImageMagick anymore.
    - Minor file name changes, incompatible though.

  [Added]
  - Bar info tool:
    - Workspaces can be suffixed.
    - Current monitor indicated by styling the layout icon differently.
  - Set class hint "Katriawm/decoration" on decoration windows, so tools
    like compton can ignore them.
  - ICCCM size hints: Requests for a fixed size are being honoured.

Milestone 3  2016-01-03
  [Fixed]