@@ -1,5 +1,13 @@
 Release history for katriawm
 
+next
+  [Fixed]
+  - Fix more focus issues. When "no window" is to be focused, we now
+    transfer focus to an invisible window instead of to the root window.
+    Especially, some VTE terminals are no longer confused about having
+    focus. Sometimes, they have drawn a solid cursor instead of a hollow
+    one.
+
 v16.02  2016-02-01
   [Fixed]
   - Less flickering when changing workspaces on the same monitor.
